Get it working, about to add index and preview funtion to it

--- a/MyProject_0624/MyProject_0624.csproj
+++ b/MyProject_0624/MyProject_0624.csproj
@@ -55,7 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="June.cs" />
+    <None Include="June.cs" />
     <Compile Include="CurveDirectionUnifier.cs" />
     <Compile Include="PipeInclusion.cs" />
     <Compile Include="MyProject_0624Info.cs" />
