--- a/MyProject_0624/HS_Toolbox.csproj
+++ b/MyProject_0624/HS_Toolbox.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="AddAttribute_Crv.cs" />
     <Compile Include="DestructAttribute_Crv.cs" />
+    <Compile Include="GetCenterline_Pipe.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -101,6 +102,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Icons\DirectionUnifier_Crv.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Icons\GetCenterLine_Pipe.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
