--- a/MyProject_0624/HS_Toolbox.csproj
+++ b/MyProject_0624/HS_Toolbox.csproj
@@ -69,6 +69,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="StringMatchIndex_String.cs" />
     <Compile Include="ZoomIterator_Obj.cs" />
     <Compile Include="DirectionUnifier_Crv.cs" />
     <None Include="CloestCrvInRadius.cs" />
@@ -126,6 +127,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Icons\setIntersectionDiff.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Icons\StringMatchIndex.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
