--- a/MyProject_0624/HS_Toolbox.csproj
+++ b/MyProject_0624/HS_Toolbox.csproj
@@ -58,7 +58,8 @@
   <ItemGroup>
     <Compile Include="AddAttribute_Crv.cs" />
     <Compile Include="AddAttribute_Pts.cs" />
-    <Compile Include="BatchAnimation_Rendering.cs" />
+    <Compile Include="AddLight_ViewPort.cs" />
+    <Compile Include="BatchAnimation_Render.cs" />
     <Compile Include="EarthCoordinatesToXY_GIS.cs" />
     <Compile Include="getBrepOutline _Brep.cs" />
     <Compile Include="getElevationPt_GIS.cs" />
