--- a/MyProject_0624/HS_Toolbox.csproj
+++ b/MyProject_0624/HS_Toolbox.csproj
@@ -35,11 +35,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GH_IO">
-      <HintPath>..\..\..\..\..\..\AppData\Roaming\McNeel\Rhinoceros\5.0\Plug-ins\Grasshopper {B45A29B1-4343-4035-989E-044E8580D9CF}\0.9.76.0\GH_IO.dll</HintPath>
+      <HintPath>..\..\..\..\AppData\Roaming\McNeel\Rhinoceros\5.0\Plug-ins\Grasshopper {B45A29B1-4343-4035-989E-044E8580D9CF}\0.9.76.0\GH_IO.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Grasshopper">
-      <HintPath>..\..\..\..\..\..\AppData\Roaming\McNeel\Rhinoceros\5.0\Plug-ins\Grasshopper {B45A29B1-4343-4035-989E-044E8580D9CF}\0.9.76.0\Grasshopper.dll</HintPath>
+      <HintPath>..\..\..\..\AppData\Roaming\McNeel\Rhinoceros\5.0\Plug-ins\Grasshopper {B45A29B1-4343-4035-989E-044E8580D9CF}\0.9.76.0\Grasshopper.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -58,8 +58,7 @@
   <ItemGroup>
     <Compile Include="AddAttribute_Crv.cs" />
     <Compile Include="AddAttribute_Pts.cs" />
-    <Compile Include="AddLight_ViewPort.cs" />
-    <Compile Include="BatchAnimation_Render.cs" />
+    <Compile Include="_ViewPort\BatchAnimation_Render.cs" />
     <Compile Include="EarthCoordinatesToXY_GIS.cs" />
     <Compile Include="getBrepOutline _Brep.cs" />
     <Compile Include="getElevationPt_GIS.cs" />
@@ -71,6 +70,7 @@
     <Compile Include="isLinear.cs" />
     <Compile Include="PtToEarthCoordinates_GIS.cs" />
     <Compile Include="staticCompare.cs" />
+    <Compile Include="_ViewPort\AddDirectionalLight_ViewPort.cs" />
     <Compile Include="_ViewPort\GetInfo_ViewPort.cs" />
     <Compile Include="_ViewPort\Make2D_ViewPort.cs" />
     <Compile Include="_ViewPort\SetCamera_ViewPort.cs" />
