--- a/MyProject_0624/HS_Toolbox.csproj
+++ b/MyProject_0624/HS_Toolbox.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="AddAttribute_Crv.cs" />
     <Compile Include="AddAttribute_Pts.cs" />
+    <Compile Include="imageReader.cs" />
     <Compile Include="stringContainInsensitive.cs" />
     <Compile Include="_Audio\GetAudioLength.cs" />
     <Compile Include="_ViewPort\AddSpotLight.cs" />
